    * if mefa is loaded after mefa4, as.array gives a warning
      because of Matrix overloads base as.matrix and as.array,
      so mefa should be called before mefa4
    * accessors work irrespective of loading sequence
      of mefa and mefa4 (still masked out but it has no
      effect on functionality.
    * segm() returned NULL instead of $xtab when segm was NULL,
      this is fixed.


Version 3.1-6 -- August 23, 2010
    * image plot for 'dist' objects
    * aoplot method added for abundance-occupancy
      plots as in Digby and Kempton 1987 p. 40.
    * New extractor methods added for mefa objects:
      xtab, samp, taxa, segm


Version 3.1-5 -- June 4, 2010

    * as.data.frame.dist renamed to stack.dist
    * as.mefa.default now return call correctly
    * plot returns histogram if data is continuous
      and barplot if data is discrete

Version 3.1-4 -- November 10, 2009 (closed - r486)

    * .onUnload problem fixed (reported by B D Ripley)


Version 3.1-3 -- October 15, 2009 (closed - r484)

    * CRAN minor release.


Version 3.1-2 -- September 22, 2009 (closed - r478)

    * mefa got namespace.
    * reshape function in reshape is no longer
      available, citations now pointing to cast
      instead (in manual and vignette).


Version 3.1-1 -- July 10, 2009 (closed - r477)

    * dist2vec: deleted (use as.vector instead)
    * fill.na: accepts 1 dimensional vectors.
    * as.data.frame.dist: now returns labels of the
      dist object (dim.names=TRUE).
    * inflate: is now obsolete, rep.data.frame is
      used instead.


Version 3.1-0 -- June 14, 2009 (closed - r407)

    * CRAN major release.


Version 3.0-3 -- June 14, 2009 (closed - r406)

    * distance matrix manipulation tools added (is.dist,
      dist2vec, as.data.frame.dist)
    * report.mefa: dir argument became more transparent
      by using getwd().


Version 3.0-2 -- May 20, 2009 (closed - r381)

    * vec2dist: function to convert a vector to dist.