@@ -1,12 +1,16 @@
 rdrop <-
-function(x, cutoff=0)
+function(x, cutoff=0, attrib=FALSE)
 {
-    if (any(rowSums(x) <= cutoff)) {
-        exclude <- which(rowSums(x) <= cutoff)
+    rs <- if (inherits(x, "mefa") || inherits(x, "Mefa"))
+        rowSums(xtab(x)) else rowSums(x)
+    if (any(rs <= cutoff)) {
+        exclude <- which(rs <= cutoff)
         rval <- x[-exclude,]
-        attr(rval, "exclude") <- exclude
-        attr(attr(rval, "exclude"), "cutoff") <- cutoff
-        attr(attr(rval, "exclude"), "margin") <- 1
+        if (attrib) {
+            attr(rval, "exclude") <- exclude
+            attr(attr(rval, "exclude"), "cutoff") <- cutoff
+            attr(attr(rval, "exclude"), "margin") <- 1
+        }
         rval
     } else x
 }
